# arxiv-paper-research-agent

./: .gitignore  README.md  categories.json  config.py  docker-compose.yml  experiment.ipynb  pyproject.toml
src/: app.py
src/embed/: embedder.py  main.py  vector_db.py
src/papers/: ingest.py
src/workflow/: agent.py  tools.py
